# qop

./: .gitignore  .qopfile  Cargo.toml
docs/: README.md
src/: .qopfile  args.rs  main.rs  reference.rs
