[package]
name = "qop"
version = "0.0.0"
authors = ["replicadse <aw@voidpointergroup.com>"]
edition = "2021"
license = "MIT"
description = "version control"
homepage = "https://github.com/replicadse/qop"
repository = "https://github.com/replicadse/qop"
keywords = ["qop"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[dependencies]
async-trait = "0.1.72"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = "4.3.19"
clap_complete = "4.3.2"
clap_mangen = "0.2.12"
clap-markdown = "0.1.3"
serde = { version = "1.0.175", features = ["derive"] }
serde_yaml = "0.9.25"
serde_json = "1.0.103"
bytes = "1.4.0"
mime = "0.3.17"
anyhow = "1.0.72"
thiserror = "1.0.44"
toml = "0.8.15"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
similar = { version = "2.5.0", features = ["inline"] }

[dev-dependencies]
hoox = "0.1.5"
rusty-hook = "0.11.2"
